# bibliometrie-uca

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DOC.md  Dockerfile  PLAN_AMELIORATION.md  PLAN_RATIONALISATION.md  README.md  ROADMAP.md  TODO.md  TODO_CLAUDE.md  TODO_LAURA.md  alembic.ini  doc.md  doc_types_crossref.csv  docker-compose.prod.yml  docker-compose.yml  orcid_openalex_only_rh.csv  package-lock.json  pyproject.toml  requirements.txt  run_pipeline.py  scripts à lancer.md  start.sh  start_sandbox.sh  todo.md
alembic/: README  env.py
analysis/: audit_oa_unpaywall.py  diagnostic_exports.py  stats_overview.py
application/: addresses.py  addresses_countries.py  addresses_structures.py  audit.py  audit_log.py  authorships.py  config.py  journals.py  journals_commands.py  persons.py  publications.py  publishers.py  publishers_commands.py  structures.py
archive/: PLAN_AMELIORATION.md
backend/: Dockerfile  app.py  deps.py  filters.py  models.py
config/: config_validation.json  labos.json  settings.docker.py  settings.example.py  settings.py  validator.py
db/: MIGRATION_PLAN.md  add_ror_to_labs.py  cleanup_repositories.sql  connection.py  migrate.py  migration_001_apc_payments.sql  migration_001_person_name_forms.sql  migration_002_false_positives.sql  migration_003_addresses.sql  migration_004_address_review.sql  migration_005_oa_uca_flag.sql  migration_006_performance_indexes.sql  migration_007_source_metadata.sql  migration_008_structures.sql  migration_009_persons.sql  migration_010_person_authors.sql  migration_011_hal_affiliations.sql  migration_012_hal_structures.sql  migration_013_enrich_hal_structures.sql  migration_014a_create_new_tables.sql  migration_014b_modify_existing.sql  migration_015_cleanup.sql  migration_016_authorships_structure_ids.sql  migration_017_performance_indexes.sql  migration_018_is_corresponding.sql  migration_019_persons_rh.sql  migration_020_staging_hash.sql  migration_021_wos_normalized.sql  migration_022_hal_form_id.sql  migration_023_wos_authorship_addresses.sql  migration_024_authorship_source_fks.sql  migration_025_identifier_status_enum.sql  migration_026_duplicate_publications.sql  populate_uca_flags.sql  refresh_publication_countries.sql  schema.sql  schema_bibliometrie.sql  schema_target_v2.sql  seed.sql  seed_laboratories.py  (+1 more)
docs/: architecture.d2  architecture.md  donnees.md  exploitation.md  glossaire.md  guide-utilisateur.md  pipeline.md  sources.md
domain/: authorship_roles.py  config.py  countries.py  dates.py  doc_types.py  entity_resolution.py  errors.py  hal_domains.py  identifiers.py  json_types.py  names.py  normalize.py  person.py  pipeline_metrics.py  pipeline_modes.py  publication.py  sources.py  stats.py  structure.py  subject.py  types.py  zenodo.py
extraction/: common.py
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts
infrastructure/: __init__.py  addresses.py  api_limits.py  api_retry.py  api_retry_async.py  app_config.py  concurrency.py  db_helpers.py  hal.py  log.py  openalex.py  perimeter.py  pipeline_lock.py  pipeline_metrics.py  pipeline_status.py  process.py  settings.py  timings.py  zenodo.py
pipeline/: metrics.py  status.json
processing/: auto_merge_name_conflict_pairs.py  backfill_wos_addresses.py  build_authorships.py  cleanup_idhal.py  create_persons_from_authorships.py  create_persons_from_source_authorships.py  create_publications.py  debug_hal_compound.py  dedup_doi_case.py  diag_hal_authors.py  diag_matching.py  enrich_hal_structures.py  enrich_journal_apc.py  enrich_oa_status.py  enrich_oa_unpaywall.py  fetch_missing_hal.py  fix_oa_person_conflicts.py  harvest_hal_identifiers.py  harvest_hal_idrefs.py  harvest_hal_orcids.py  import_apc.py  import_persons.py  merge_duplicate_persons.py  merge_hal_openalex_pubs.py  merge_lab_duplicates.py  merge_pubs_by_hal_id.py  merge_pubs_by_nnt.py  migrate_deduplicate.py  migrate_hal.py  migrate_openalex.py  migrate_person_identifiers.py  migrate_person_links.py  normalize_hal.py  normalize_openalex.py  normalize_scanr.py  normalize_theses.py  normalize_wos.py  populate_addresses.py  populate_affiliations.py  populate_hal_struct_ids.py  (+9 more)
scripts/: assign_orphans_by_name_form.py  audit_oa_unpaywall.py  backfill_doc_types.py  backfill_hal_raw_affiliations.py  backfill_idhal_person_identifiers.py  backfill_name_forms.py  backfill_theses_non_author_addresses.py  backfill_wos_institutions.py  cleanup_non_affiliated_person_links.py  cleanup_zenodo_duplicates.py  deduplicate_hal_source_authorships.py  detect_address_countries.py  explain_key_queries.sql  fix_chapter_doi_merges.py  fix_oa_dissertation_types.py  fix_openalex_theses_doc_types.py  fix_person_name_forms.py  generate_seed.py  import_apc.py  import_openapc.py  import_persons.py  map_hal_structures.py  merge_duplicate_persons_by_publication.py  merge_duplicate_theses.py  merge_person_duplicates_by_lab.py  merge_scanr_hal_duplicates.py  merge_versioned_doi_duplicates.py  purge_out_of_perimeter.py  suggest_address_countries.py
services/: addresses.py  authorships.py  config.py  journals.py  persons.py  publications.py  structures.py
tests/: conftest.py  test_addresses_service.py  test_api.py  test_audit.py  test_authorships_service.py  test_config_service.py  test_dedup_persons.py  test_dedup_publications.py  test_domain_person.py  test_domain_publication.py  test_extraction_common.py  test_idempotence.py  test_identifiers.py  test_imports.py  test_integration.py  test_journals_service.py  test_meta_hash.py  test_name_forms.py  test_normalize.py  test_persons_service.py  test_publications_service.py  test_reprocessing.py  test_resolve_addresses.py  test_structures_service.py  test_utils.py
utils/: addresses.py  api_limits.py  api_retry.py  app_config.py  authorship_roles.py  db_helpers.py  doc_types.py  doi.py  hal.py  log.py  merge_persons.py  names.py  nnt.py  normalize.py  perimeter.py  sources.py  timings.py  uca_perimeter.py  zenodo.py
(+2061 files in other folders)
