[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bibliometrie-uca"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests==2.33.0",          # CVE-2024-35195, CVE-2024-47081, CVE-2026-25645 fixed
    "httpx==0.27.2",             # extractions HTTP async dans le pipeline
    "psycopg[binary]==3.3.3",
    "psycopg-pool==3.3.0",
    "fastapi==0.128.2",
    "uvicorn==0.40.0",
    "bcrypt==5.0.0",
    "python-dotenv==1.2.2",      # requis par pydantic-settings pour env_file ; CVE-2026-28684 fixed
    "pydantic==2.12.5",          # requis par pydantic-settings et utilisé directement
    "pydantic-settings==2.13.1",
    "openpyxl==3.1.5",           # utilisé par interfaces/cli/import_persons.py
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",                   # CVE-2025-71176 fixed
    "pytest-asyncio==1.3.0",           # tests async des endpoints FastAPI et adapters
    "pytest-cov==7.1.0",
    "respx==0.22.0",                   # mocking httpx pour tests async
    "ruff==0.15.11",
    "mypy==1.20.1",
    "types-requests==2.33.0.20260408",
    "deptry==0.25.1",
    "pip-audit==2.10.0",
    "pre-commit==4.4.0",
    "import-linter==2.11",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["application*", "domain*", "infrastructure*", "interfaces*"]

# ----------------------------------------------------------------------
# deptry : détection de dépendances manquantes / inutiles / transitives
# Lit [project.dependencies] (PEP 621) et [project.optional-dependencies.dev].
# ----------------------------------------------------------------------
[tool.deptry]
known_first_party = ["application", "domain", "infrastructure", "interfaces"]
extend_exclude = ["frontend", ".venv", "venv"]
# Le groupe `dev` de [project.optional-dependencies] est pour les outils
# de dev/test — deptry ne doit pas exiger qu'ils soient importés.
optional_dependencies_dev_groups = ["dev"]

# ----------------------------------------------------------------------
# import-linter : vérifie les règles de dépendance entre couches DDD.
# Lancement : `lint-imports`
# ----------------------------------------------------------------------
[tool.importlinter]
root_packages = ["domain", "application", "infrastructure", "interfaces"]

[[tool.importlinter.contracts]]
name = "Couches DDD (layered)"
type = "layers"
layers = ["interfaces", "infrastructure | application", "domain"]
# `application` n'importe pas `infrastructure` : toute nouvelle
# dépendance doit passer par un port.

[tool.deptry.per_rule_ignores]
# python-dotenv n'est pas importé directement, mais pydantic-settings
# l'appelle en interne dès qu'on utilise `env_file=...`.
DEP002 = ["python-dotenv"]

# Alias paquet distribué → nom de module importé (les noms peuvent
# différer : `psycopg-pool` installe le module `psycopg_pool`, etc.).
[tool.deptry.package_module_name_map]
psycopg-pool = "psycopg_pool"
pydantic-settings = "pydantic_settings"

# ----------------------------------------------------------------------
# Ruff : linter + formateur (remplace flake8, isort, pyupgrade, black)
# Mode permissif au début — voir `ruff check .` et `ruff format --check .`
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "interfaces/frontend",
    "bibliometrie_uca.egg-info",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Règles activées — on démarre permissif, à durcir au fil du temps.
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (undefined names, unused imports, etc.)
    "I",      # isort (ordre des imports)
    "UP",     # pyupgrade (syntaxe obsolète)
    "B",      # flake8-bugbear (pièges courants)
    "C901",   # complexité cyclomatique
    "ASYNC",  # flake8-async : I/O bloquantes dans une async def, etc.
]
# RUF029 (async def sans await) serait utile mais reste en preview chez
# ruff à ce jour : l'activer exigerait `preview = true` qui allume
# d'autres règles preview non évaluées. À ajouter quand elle stabilise.
# Ignorés le temps d'assainir progressivement
ignore = [
    "E501", # ligne trop longue — à durcir plus tard
    "E402", # module-level import not at top — quelques cas légitimes
    "B008", # function call in default argument — FastAPI Depends() idiomatique
]

[tool.ruff.lint.mccabe]
# Seuil à 15 après décomposition de publications_facets (25 → <10),
# _build_list_conditions (17 → <15), refresh_from_sources (24 → <15),
# export_publications_csv (23 → <15). Prochaine cible : 10.
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"] # imports après setup de conftest
"interfaces/cli/*" = ["E402", "C901"] # scripts one-shot, complexité tolérée
"application/pipeline/*" = [
    "C901",
] # normalisation par source, nombreuses branches métier
"infrastructure/sources/*" = ["C901"] # idem pour les extracteurs
"interfaces/api/routers/*" = ["E402"] # imports tardifs fréquents

# ----------------------------------------------------------------------
# Pytest + coverage
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# pytest-asyncio mode auto — les fonctions `async def test_*` sont
# reconnues automatiquement sans décorateur. Loop scope par fonction
# (défaut) : chaque test async a sa propre boucle.
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["application", "domain", "infrastructure", "interfaces"]
omit = [
    "tests/*",
    "*/__init__.py",
    # Scripts CLI one-shot : lancés à la main, pas testés unitairement.
    # Leur logique métier utile est factorisée dans application/ ou
    # infrastructure/ et testée là.
    "interfaces/cli/*",
    # Debug scripts dans interfaces/cli/debug/
    "interfaces/cli/debug/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
# Seuil progressif : ne jamais régresser. À faire remonter au fur et à
# mesure qu'on ajoute des tests.
fail_under = 62
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ----------------------------------------------------------------------
# Mypy : type checker (mode permissif au démarrage)
# Durcir module par module via overrides quand le code est stabilisé.
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
# Imports : ignorer les libs tierces non typées plutôt que de polluer
ignore_missing_imports = true
# Mode strict : toutes les fonctions doivent être annotées, et leur corps
# est vérifié. `warn_return_any` reste off car `-> Any` est utilisé
# pragmatiquement sur les fonctions CLI/helpers où le type de retour
# n'apporte pas d'information.
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = false
# Afficher les codes d'erreur pour pouvoir ignorer précisément au besoin
show_error_codes = true
# Ne pas imposer l'absence d'Optional implicite
implicit_optional = true
# Ignorer les erreurs dans les tests (focus sur le code de prod)
exclude = [
    "^tests/",
    "^frontend/",
    "^bibliometrie_uca\\.egg-info/",
    "^\\.venv/",
    "^build/",
]
