[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bibliometrie-uca"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests==2.33.0",          # CVE-2024-35195, CVE-2024-47081, CVE-2026-25645 fixed
    "httpx==0.27.2",             # extractions HTTP async dans le pipeline
    "psycopg[binary]==3.3.3",
    "psycopg-pool==3.3.0",
    "sqlalchemy==2.0.43",        # query builder Core (chantier sqlalchemy-core-adoption.md)
    "alembic==1.18.0",           # migrations DB (chantier alembic-adoption.md)
    "fastapi==0.128.2",
    "uvicorn==0.40.0",
    "bcrypt==5.0.0",
    "python-dotenv==1.2.2",      # requis par pydantic-settings pour env_file ; CVE-2026-28684 fixed
    "pydantic==2.12.5",          # requis par pydantic-settings et utilisé directement
    "pydantic-settings==2.13.1",
    "openpyxl==3.1.5",           # utilisé par interfaces/cli/import_persons.py
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",                   # CVE-2025-71176 fixed
    "pytest-asyncio==1.3.0",           # tests async des endpoints FastAPI et adapters
    "pytest-cov==7.1.0",
    "respx==0.22.0",                   # mocking httpx pour tests async
    "ruff==0.15.11",
    "mypy==1.20.1",
    "types-requests==2.33.0.20260408",
    "deptry==0.25.1",
    "pip-audit==2.10.0",
    "pre-commit==4.4.0",
    "import-linter==2.11",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["application*", "domain*", "infrastructure*", "interfaces*"]

# ----------------------------------------------------------------------
# deptry : détection de dépendances manquantes / inutiles / transitives
# Lit [project.dependencies] (PEP 621) et [project.optional-dependencies.dev].
# ----------------------------------------------------------------------
[tool.deptry]
known_first_party = ["application", "domain", "infrastructure", "interfaces"]
extend_exclude = ["frontend", ".venv", "venv"]
# Le groupe `dev` de [project.optional-dependencies] est pour les outils
# de dev/test — deptry ne doit pas exiger qu'ils soient importés.
optional_dependencies_dev_groups = ["dev"]

# ----------------------------------------------------------------------
# import-linter : vérifie les règles de dépendance entre couches DDD.
# Lancement : `lint-imports`
# ----------------------------------------------------------------------
[tool.importlinter]
root_packages = ["domain", "application", "infrastructure", "interfaces"]
# Nécessaire pour les contrats `forbidden` qui ciblent des modules
# externes (cf. "Domain : pas de framework externe").
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Couches DDD (layered)"
type = "layers"
layers = ["interfaces", "infrastructure | application", "domain"]
# `application` n'importe pas `infrastructure` : toute nouvelle
# dépendance doit passer par un port.
#
# Exception : `application.ports.*` est zone neutre (cf. règle 2
# d'architecture.md). `infrastructure` peut en importer les
# dataclasses de transport pour typer ses signatures (cf. règle 3).
# Les Protocols restent implémentés via duck typing.
ignore_imports = [
    "infrastructure.** -> application.ports.**",
]

[[tool.importlinter.contracts]]
name = "Routers : pas d'import direct de infrastructure"
type = "forbidden"
source_modules = ["interfaces.api.routers"]
forbidden_modules = ["infrastructure"]
# Les routers FastAPI pilotent des use-cases applicatifs et reçoivent
# leurs dépendances via `Depends(...)` (factories dans
# `interfaces.api.async_deps`, composition root). La construction des
# adapters et l'accès direct à l'infra (queries, repos, pool, engine)
# y sont interdits. Cf. règle 4 de docs/architecture.md et chantier
# docs/chantiers/routers-di.md.
#
# Imports transitifs autorisés : `routers → async_deps → infrastructure`
# est le chemin attendu (composition root), donc on n'interdit que les
# imports directs.
allow_indirect_imports = "true"
ignore_imports = [
    # Hors périmètre du chantier routers-di : status filesystem
    # (relu dans le futur chantier observabilité pipeline) et chemin
    # projet (en attendant la refonte du mode d'affichage de la doc).
    # Ces 2 cas ne sont pas des queries / repos et ne dépendent pas
    # d'une connexion DB.
    "interfaces.api.routers.admin_pipeline -> infrastructure.pipeline_status",
    "interfaces.api.routers.docs -> infrastructure",
]

[[tool.importlinter.contracts]]
name = "Composition root : Pg* concrets uniquement dans app et deps"
type = "forbidden"
source_modules = ["interfaces.api"]
forbidden_modules = [
    "infrastructure.repositories",
    "infrastructure.db.queries",
]
# Verrouillage de la règle 5 de docs/architecture.md : seul
# `interfaces/api/deps.py` instancie les `Pg*` concrets et les
# repositories ; les routers et autre utilitaire éventuel sous
# `interfaces.api/` doivent passer par un port via `Depends(...)`.
# (`interfaces/api/app.py` n'importe ni `repositories` ni
# `db.queries` — pas besoin de l'ignorer.)
#
# `ignore_imports` exige le matching exact (pas les descendants),
# d'où l'énumération des sub-modules `infrastructure.db.queries.*`
# consommés par `deps.py`.
ignore_imports = [
    "interfaces.api.deps -> infrastructure.repositories.address_repository",
    "interfaces.api.deps -> infrastructure.repositories.audit_repository",
    "interfaces.api.deps -> infrastructure.repositories.authorship_repository",
    "interfaces.api.deps -> infrastructure.repositories.journal_repository",
    "interfaces.api.deps -> infrastructure.repositories.perimeter_repository",
    "interfaces.api.deps -> infrastructure.repositories.person_repository",
    "interfaces.api.deps -> infrastructure.repositories.publication_repository",
    "interfaces.api.deps -> infrastructure.repositories.publisher_repository",
    "interfaces.api.deps -> infrastructure.repositories.structure_repository",
    "interfaces.api.deps -> infrastructure.db.queries.addresses",
    "interfaces.api.deps -> infrastructure.db.queries.admin_feedback",
    "interfaces.api.deps -> infrastructure.db.queries.config",
    "interfaces.api.deps -> infrastructure.db.queries.hal_problems",
    "interfaces.api.deps -> infrastructure.db.queries.journals",
    "interfaces.api.deps -> infrastructure.db.queries.laboratories",
    "interfaces.api.deps -> infrastructure.db.queries.perimeter",
    "interfaces.api.deps -> infrastructure.db.queries.person_duplicates",
    "interfaces.api.deps -> infrastructure.db.queries.persons",
    "interfaces.api.deps -> infrastructure.db.queries.publication_duplicates",
    "interfaces.api.deps -> infrastructure.db.queries.publications",
    "interfaces.api.deps -> infrastructure.db.queries.publishers",
    "interfaces.api.deps -> infrastructure.db.queries.stats",
    "interfaces.api.deps -> infrastructure.db.queries.structures",
    "interfaces.api.deps -> infrastructure.db.queries.subjects",
]

[[tool.importlinter.contracts]]
name = "Domain : pas de framework externe"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = ["pydantic", "sqlalchemy", "fastapi", "starlette", "psycopg"]
# Le domaine ne dépend de rien : pas d'ORM, pas de validation
# Pydantic, pas de framework web, pas de driver DB. Les modèles
# d'I/O JSONB (BaseModel) vivent dans infrastructure/db/jsonb_models/.
# Cf. docs/chantiers/CODE_purete-domain.md.

[tool.deptry.per_rule_ignores]
# python-dotenv n'est pas importé directement, mais pydantic-settings
# l'appelle en interne dès qu'on utilise `env_file=...`.
DEP002 = ["python-dotenv"]

# Alias paquet distribué → nom de module importé (les noms peuvent
# différer : `psycopg-pool` installe le module `psycopg_pool`, etc.).
[tool.deptry.package_module_name_map]
psycopg-pool = "psycopg_pool"
pydantic-settings = "pydantic_settings"

# ----------------------------------------------------------------------
# Ruff : linter + formateur (remplace flake8, isort, pyupgrade, black)
# Mode permissif au début — voir `ruff check .` et `ruff format --check .`
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "interfaces/frontend",
    "bibliometrie_uca.egg-info",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Règles activées — on démarre permissif, à durcir au fil du temps.
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (undefined names, unused imports, etc.)
    "I",      # isort (ordre des imports)
    "UP",     # pyupgrade (syntaxe obsolète)
    "B",      # flake8-bugbear (pièges courants)
    "C901",   # complexité cyclomatique
    "ASYNC",  # flake8-async : I/O bloquantes dans une async def, etc.
]
# RUF029 (async def sans await) serait utile mais reste en preview chez
# ruff à ce jour : l'activer exigerait `preview = true` qui allume
# d'autres règles preview non évaluées. À ajouter quand elle stabilise.
# Ignorés le temps d'assainir progressivement
ignore = [
    "E501", # ligne trop longue — à durcir plus tard
    "E402", # module-level import not at top — quelques cas légitimes
    "B008", # function call in default argument — FastAPI Depends() idiomatique
]

[tool.ruff.lint.mccabe]
# Seuil à 15 après décomposition de publications_facets (25 → <10),
# _build_list_conditions (17 → <15), refresh_from_sources (24 → <15),
# export_publications_csv (23 → <15). Prochaine cible : 10.
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"] # imports après setup de conftest
"interfaces/cli/*" = ["E402", "C901"] # scripts one-shot, complexité tolérée
"application/pipeline/*" = [
    "C901",
] # normalisation par source, nombreuses branches métier
"infrastructure/sources/*" = ["C901"] # idem pour les extracteurs
"interfaces/api/routers/*" = ["E402"] # imports tardifs fréquents

# ----------------------------------------------------------------------
# Pytest + coverage
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# pytest-asyncio mode auto — les fonctions `async def test_*` sont
# reconnues automatiquement sans décorateur. Loop scope par fonction
# (défaut) : chaque test async a sa propre boucle.
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["application", "domain", "infrastructure", "interfaces"]
omit = [
    "tests/*",
    "*/__init__.py",
    # Scripts CLI one-shot : lancés à la main, pas testés unitairement.
    # Leur logique métier utile est factorisée dans application/ ou
    # infrastructure/ et testée là.
    "interfaces/cli/*",
    # Debug scripts dans interfaces/cli/debug/
    "interfaces/cli/debug/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
# Seuil progressif : ne jamais régresser. À faire remonter au fur et à
# mesure qu'on ajoute des tests.
fail_under = 62
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ----------------------------------------------------------------------
# Mypy : type checker (mode permissif au démarrage)
# Durcir module par module via overrides quand le code est stabilisé.
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
# Imports : ignorer les libs tierces non typées plutôt que de polluer
ignore_missing_imports = true
# Mode strict : toutes les fonctions doivent être annotées, et leur corps
# est vérifié.
check_untyped_defs = true
disallow_untyped_defs = true
# `Any` explicite interdit globalement — aboutissement du chantier
# `CODE_chasse-aux-any`. Exceptions explicites via overrides ci-dessous,
# toutes documentées (frontières JSON/JSONB en lecture, records DB
# hydratés, helpers polymorphiques, partial updates DB).
disallow_any_explicit = true
disallow_any_generics = true
# `-> Any` propagé toléré pragmatiquement.
warn_return_any = false
# Afficher les codes d'erreur pour pouvoir ignorer précisément au besoin
show_error_codes = true
# Ne pas imposer l'absence d'Optional implicite
implicit_optional = true
# Ignorer les erreurs dans les tests (focus sur le code de prod)
exclude = [
    "^tests/",
    "^frontend/",
    "^bibliometrie_uca\\.egg-info/",
    "^\\.venv/",
    "^build/",
    # Code Alembic : `op` et `context` sont ajoutés dynamiquement au
    # module `alembic` à l'import, mypy ne les détecte pas. Cohérent
    # avec l'exclusion `tests/` : code framework, pas du métier.
    "^alembic/",
]

# Désactivation explicite pour les modules dont les `Any` sont
# délibérés. Documentés au cas par cas :
# - `domain.sources.*` : payloads JSON bruts d'APIs externes (lecture
#   dynamique, forcer `JsonValue` exigerait des isinstance partout).
# - `domain.ports.*` (sauf audit, déjà strict) : records DB hydratés et
#   partial updates `fields: dict[str, Any]` — délégués au chantier
#   `CODE_rich-domain-model` Phase 8.
# - `domain.publications.aggregation` : `first_non_null` /
#   `merge_lists_dedup_ci` polymorphiques sur `getattr(source, attr)`.
# - `application.ports.api.*` et `application.ports.pipeline.*` (hors
#   normalize ciblés) : Protocols qui retournent `dict[str, Any]`
#   records DB.
# - `application.pipeline.normalize.*` : consomment des `dict[str, Any]`
#   payloads venant des APIs (cf. `domain.sources.*`).
# - `application.pipeline.persons.create_persons_from_source_authorships` :
#   cascade matching bloquée par `METIER_decide-person-match`.
# - Services racine `application.{config,persons,journals,publishers,
#   structures,addresses.countries,authorships.core}` : retournent ou
#   reçoivent des records / partial updates DB (Phase 8).
# - `infrastructure.repositories.*` et `infrastructure.db.queries.*` :
#   couche SQL — Row, records DB, batchs hétérogènes. Phase 8.
# - `infrastructure.sources.*` : extracteurs API, payloads JSON.
# - `infrastructure.{api_retry,api_retry_async,settings,pipeline_status}`
#   et `interfaces.cli.{imports,maintenance}.*` : hors scope du
#   chantier (CLIs / framework).
# - `interfaces.api.models:ConfigItem.value` / `ConfigValueUpdate.value` :
#   pydantic ne supporte pas l'alias récursif `JsonValue` (py310).
# - `interfaces.cli.dev.generate_seed.TABLES` : schéma de seed,
#   `list[dict[str, Any]]` délibéré.
[[tool.mypy.overrides]]
module = [
    "application.addresses.countries",
    "application.authorships.core",
    "application.config",
    "application.journals",
    "application.persons",
    "application.publishers",
    "application.structures",
    "application.pipeline.affiliations.resolve_addresses",
    "application.pipeline.enrich.*",
    "application.pipeline.fetch_missing_doi",
    "application.pipeline.normalize.*",
    "application.pipeline.persons.create_persons_from_source_authorships",
    "application.pipeline.persons.populate_person_name_forms",
    "application.pipeline.publications.match_or_create_publications",
    "application.pipeline.publications.merge_pubs_by_hal_id",
    "application.pipeline.subjects._common",
    "application.pipeline.subjects.run",
    "application.ports.api.*",
    "application.ports.config",
    "application.ports.pipeline.address_resolution",
    "application.ports.pipeline.merge",
    "application.ports.pipeline.name_forms",
    "application.ports.pipeline.normalize.wos",
    "application.ports.pipeline.persons_create",
    "application.ports.pipeline.publications_match_or_create",
    "application.ports.pipeline.staging",
    "application.ports.pipeline.subjects",
    "domain.ports.*",
    "domain.publications.aggregation",
    "domain.sources.*",
    "infrastructure.api_retry",
    "infrastructure.api_retry_async",
    "infrastructure.db.jsonb_models.*",
    "infrastructure.db.queries.*",
    "infrastructure.pipeline_status",
    "infrastructure.repositories.*",
    "infrastructure.settings",
    "infrastructure.sources.*",
    "interfaces.api.models",
    "interfaces.api.routers.docs",
    "interfaces.api.routers.journals",
    "interfaces.cli.dev.generate_seed",
    "interfaces.cli.imports.*",
    "interfaces.cli.maintenance.*",
    "run_pipeline",
]
disallow_any_explicit = false
disallow_any_generics = false
