[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bibliometrie-uca"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests==2.33.0",          # CVE-2024-35195, CVE-2024-47081, CVE-2026-25645 fixed
    "httpx==0.27.2",             # extractions HTTP async dans le pipeline
    "psycopg[binary]==3.3.3",     # driver Postgres pour SQLAlchemy ; import symbolique dans infrastructure/db/engine.py
    "sqlalchemy==2.0.43",        # query builder Core (chantier sqlalchemy-core-adoption.md)
    "alembic==1.18.0",           # migrations DB (chantier alembic-adoption.md)
    "fastapi==0.136.3",
    "starlette==1.3.1",          # importé directement (Response, Scope, RequestResponseEndpoint) ; ≥1.3.1 corrige CVE-2026-54282/54283 (≥1.0.1 corrigeait déjà CVE-2026-48710)
    "uvicorn==0.40.0",
    "bcrypt==5.0.0",
    "python-dotenv==1.2.2",      # requis par pydantic-settings pour env_file ; CVE-2026-28684 fixed
    "pydantic==2.12.5",          # requis par pydantic-settings et utilisé directement
    "pydantic-settings==2.14.2",  # ≥2.14.2 corrige GHSA-4xgf-cpjx-pc3j
    "openpyxl==3.1.5",           # utilisé par interfaces/cli/import_persons.py
    "pyahocorasick==2.2.0",      # automate Aho-Corasick : matching multi-formes des adresses (phase affiliations)
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",                   # CVE-2025-71176 fixed
    "pytest-asyncio==1.3.0",           # tests async des endpoints FastAPI et adapters
    "pytest-cov==7.1.0",
    "respx==0.22.0",                   # mocking httpx pour tests async
    "ruff==0.15.11",
    "mypy==1.20.1",
    "types-requests==2.33.0.20260408",
    "deptry==0.25.1",
    "pip-audit==2.10.0",
    "pre-commit==4.4.0",
    "import-linter==2.11",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["application*", "domain*", "infrastructure*", "interfaces*"]

# ----------------------------------------------------------------------
# deptry : détection de dépendances manquantes / inutiles / transitives
# Lit [project.dependencies] (PEP 621) et [project.optional-dependencies.dev].
# ----------------------------------------------------------------------
[tool.deptry]
known_first_party = ["application", "domain", "infrastructure", "interfaces"]
extend_exclude = ["frontend", ".venv", "venv"]
# Le groupe `dev` de [project.optional-dependencies] est pour les outils
# de dev/test — deptry ne doit pas exiger qu'ils soient importés.
optional_dependencies_dev_groups = ["dev"]

# ----------------------------------------------------------------------
# import-linter : vérifie les règles de dépendance entre couches DDD.
# Lancement : `lint-imports`
# ----------------------------------------------------------------------
[tool.importlinter]
root_packages = ["domain", "application", "infrastructure", "interfaces"]
# Nécessaire pour les contrats `forbidden` qui ciblent des modules
# externes (cf. "Domain : pas de framework externe").
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Couches DDD (layered)"
type = "layers"
layers = ["interfaces", "infrastructure | application", "domain"]
# `application` n'importe pas `infrastructure` : toute nouvelle
# dépendance doit passer par un port.
#
# Exception : `application.ports.*` est zone neutre (cf. règle 2
# d'architecture.md). `infrastructure` peut en importer les
# dataclasses de transport pour typer ses signatures (cf. règle 3).
# Les Protocols restent implémentés via duck typing.
#
ignore_imports = [
    "infrastructure.** -> application.ports.**",
]

[[tool.importlinter.contracts]]
name = "Routers : pas d'import direct de infrastructure"
type = "forbidden"
source_modules = ["interfaces.api.routers"]
forbidden_modules = ["infrastructure"]
# Les routers FastAPI pilotent des use-cases applicatifs et reçoivent
# leurs dépendances via `Depends(...)` (factories dans
# `interfaces.api.async_deps`, composition root). La construction des
# adapters et l'accès direct à l'infra (queries, repos, pool, engine)
# y sont interdits. Cf. règle 4 de docs/architecture.md et chantier
# docs/chantiers/routers-di.md.
#
# Imports transitifs autorisés : `routers → async_deps → infrastructure`
# est le chemin attendu (composition root), donc on n'interdit que les
# imports directs.
allow_indirect_imports = "true"
ignore_imports = [
    # Hors périmètre du chantier routers-di : status filesystem
    # (relu dans le futur chantier observabilité pipeline). Pas
    # une query / repo, ne dépend pas d'une connexion DB.
    "interfaces.api.routers.admin.pipeline_logs -> infrastructure.observability.pipeline_status",
]

[[tool.importlinter.contracts]]
name = "Composition root : Pg* concrets uniquement dans app et deps"
type = "forbidden"
source_modules = ["interfaces.api"]
forbidden_modules = [
    "infrastructure.repositories",
    "infrastructure.queries",
]
# Verrouillage de la règle 5 de docs/architecture.md : seul
# `interfaces/api/deps.py` instancie les `Pg*` concrets ; les routers
# et autres modules sous `interfaces.api/` passent par un port via
# `Depends(...)`.
ignore_imports = [
    "interfaces.api.deps -> infrastructure.repositories.**",
    "interfaces.api.deps -> infrastructure.queries.**",
]

[[tool.importlinter.contracts]]
name = "Domain : pas de framework externe"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = ["pydantic", "sqlalchemy", "fastapi", "starlette", "psycopg"]
# Le domaine ne dépend de rien : pas d'ORM, pas de validation
# Pydantic, pas de framework web, pas de driver DB. Les modèles
# d'I/O JSONB (BaseModel) vivent dans infrastructure/jsonb_models/.
# Cf. docs/chantiers/CODE_purete-domain.md.

[tool.deptry.per_rule_ignores]
# python-dotenv n'est pas importé directement, mais pydantic-settings
# l'appelle en interne dès qu'on utilise `env_file=...`.
DEP002 = ["python-dotenv"]

# Alias paquet distribué → nom de module importé (les noms peuvent différer).
[tool.deptry.package_module_name_map]
pydantic-settings = "pydantic_settings"
pyahocorasick = "ahocorasick"

# ----------------------------------------------------------------------
# Ruff : linter + formateur (remplace flake8, isort, pyupgrade, black)
# Mode permissif au début — voir `ruff check .` et `ruff format --check .`
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "interfaces/frontend",
    "bibliometrie_uca.egg-info",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Règles activées — on démarre permissif, à durcir au fil du temps.
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (undefined names, unused imports, etc.)
    "I",      # isort (ordre des imports)
    "UP",     # pyupgrade (syntaxe obsolète)
    "B",      # flake8-bugbear (pièges courants)
    "C901",   # complexité cyclomatique
    "ASYNC",  # flake8-async : I/O bloquantes dans une async def, etc.
]
# RUF029 (async def sans await) serait utile mais reste en preview chez
# ruff à ce jour : l'activer exigerait `preview = true` qui allume
# d'autres règles preview non évaluées. À ajouter quand elle stabilise.
# Ignorés le temps d'assainir progressivement
ignore = [
    "E501", # ligne trop longue — à durcir plus tard
    "E402", # module-level import not at top — quelques cas légitimes
    "B008", # function call in default argument — FastAPI Depends() idiomatique
]

[tool.ruff.lint.mccabe]
# Seuil à 15 après décomposition de publications_facets (25 → <10),
# _build_list_conditions (17 → <15), refresh_from_sources (24 → <15),
# export_publications_csv (23 → <15). Prochaine cible : 10.
max-complexity = 15

[tool.ruff.lint.isort]
# Regroupe les imports d'un même module en un seul bloc, alias inclus
# (sinon chaque `from x import (a as b)` aliasé occupe son propre bloc).
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"] # imports après setup de conftest
"interfaces/cli/*" = ["E402", "C901"] # scripts one-shot, complexité tolérée
"application/pipeline/*" = [
    "C901",
] # normalisation par source, nombreuses branches métier
"infrastructure/sources/*" = ["C901"] # idem pour les extracteurs
"application/publishers_enrichment/*" = ["C901"] # orchestrateurs d'API (retry, circuit-breaker, gating)
"interfaces/api/routers/*" = ["E402"] # imports tardifs fréquents

# ----------------------------------------------------------------------
# Pytest + coverage
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# pytest-asyncio mode auto — les fonctions `async def test_*` sont
# reconnues automatiquement sans décorateur. Loop scope par fonction
# (défaut) : chaque test async a sa propre boucle.
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["application", "domain", "infrastructure", "interfaces"]
omit = [
    "tests/*",
    "*/__init__.py",
    # Scripts CLI one-shot : lancés à la main, pas testés unitairement.
    # Leur logique métier utile est factorisée dans application/ ou
    # infrastructure/ et testée là.
    "interfaces/cli/*",
    # Debug scripts dans interfaces/cli/debug/
    "interfaces/cli/debug/*",
    # Wiring HTTP des adapters sources : pure functions de parsing
    # extraites dans `domain/sources/<source>_extract.py` (couvert par
    # tests unit) ; ce qui reste = httpx + pagination + sleep + impl
    # du port `<Source>ExtractAdapter`. Faible ROI sur tests fixtures
    # (cf. docs/chantiers/CODE_couverture-tests.md).
    "infrastructure/sources/hal/extract_hal.py",
    "infrastructure/sources/hal/fetch_missing_hal_id.py",
    "infrastructure/sources/hal/fetch_missing_doi.py",
    "infrastructure/sources/openalex/extract_openalex.py",
    "infrastructure/sources/openalex/fetch_missing_doi.py",
    "infrastructure/sources/openalex/refetch_truncated.py",
    "infrastructure/sources/scanr/extract_scanr.py",
    "infrastructure/sources/scanr/fetch_missing_doi.py",
    "infrastructure/sources/theses/extract_theses.py",
    "infrastructure/sources/wos/extract_wos.py",
    "infrastructure/sources/wos/fetch_missing_doi.py",
    "infrastructure/sources/crossref/fetch_missing_doi.py",
    # Orchestrateurs CLI du pipeline d'extraction : wiring async
    # (httpx + Semaphore + Lock) + branches mode/dry_run/stats_only.
    # Même logique d'exclusion que les adapters HTTP ci-dessus.
    "application/pipeline/extract/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
# Seuil progressif : ne jamais régresser. À faire remonter au fur et à
# mesure qu'on ajoute des tests.
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ----------------------------------------------------------------------
# Mypy : type checker (mode permissif au démarrage)
# Durcir module par module via overrides quand le code est stabilisé.
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
# Imports : ignorer les libs tierces non typées plutôt que de polluer
ignore_missing_imports = true
# Mode strict : toutes les fonctions doivent être annotées, et leur corps
# est vérifié.
check_untyped_defs = true
disallow_untyped_defs = true
# `Any` explicite interdit globalement — aboutissement du chantier
# `CODE_chasse-aux-any`. Exceptions explicites via overrides ci-dessous,
# toutes documentées (frontières JSON/JSONB en lecture, records DB
# hydratés, helpers polymorphiques, partial updates DB).
disallow_any_explicit = true
disallow_any_generics = true
# `-> Any` propagé toléré pragmatiquement.
warn_return_any = false
# Afficher les codes d'erreur pour pouvoir ignorer précisément au besoin
show_error_codes = true
# Ne pas imposer l'absence d'Optional implicite
implicit_optional = true
# Ignorer les erreurs dans les tests (focus sur le code de prod)
exclude = [
    "^tests/",
    "^frontend/",
    "^bibliometrie_uca\\.egg-info/",
    "^\\.venv/",
    "^build/",
    # Code Alembic : `op` et `context` sont ajoutés dynamiquement au
    # module `alembic` à l'import, mypy ne les détecte pas. Cohérent
    # avec l'exclusion `tests/` : code framework, pas du métier.
    "^alembic/",
]

# Désactivation explicite pour les modules dont les `Any` sont
# délibérés. Documentés au cas par cas :
# - `domain.sources.*`, `infrastructure.sources.*`, `infrastructure.jsonb_models.*` :
#   payloads JSON bruts d'APIs externes / colonnes JSONB libres.
# - `application.ports.api.*` : DTOs Pydantic co-localisés — `BaseModel`
#   propage `Any` via ses stubs (`__init__: **data: Any`), ce qui déclenche
#   `explicit-any` à chaque héritage `class X(BaseModel)`. Le `Any` côté
#   projet est strict (Phase 4 du chantier `CODE_typage-projections-strict`)
#   mais l'override couvre Pydantic. Idem pour `infrastructure.settings` qui
#   hérite de `BaseSettings`.
# - `application.ports.repositories.*` (sauf audit, déjà strict) : records DB
#   hydratés et partial updates — délégués au chantier `CODE_rich-domain-model`
#   Phase 8.
# - `application.ports.pipeline.{staging,subjects}` : `raw_data: dict[str, Any]`
#   JSONB sur `StagingRow`, `list[Any]` sur
#   `select_source_publications_with_subjects`.
# - `domain.publications.aggregation` : `first_non_null` /
#   `merge_lists_dedup_ci` polymorphiques sur `getattr(source, attr)`.
# - `application.pipeline.normalize.*` (hors port `normalize.wos`, déjà strict) :
#   consomment des payloads `dict[str, Any]` venant des APIs externes (cf.
#   `domain.sources.*`).
# - `application.pipeline.subjects._common` : `_PushedOntology` interne au
#   cache (dict mutable avec sets, difficile à typer).
# - Services racine `application.{persons,structures}` : `list` / `dict` sans
#   paramètres (records DB hydratés) — délégués à Phase 8 (`CODE_rich-domain-model`).
# - `infrastructure.repositories.*` et `infrastructure.queries.*` :
#   couche SQL — Row, records DB, batchs hétérogènes. Phase 8.
# - `interfaces.cli.{imports,maintenance}.*` : scripts one-shot, hors scope.
# - `interfaces.api.models.*` : nombreux fields `Any` (payloads JSONB libres
#   côté API, body dicts hétérogènes). Hors scope du chantier typage strict
#   tant que `JsonValue` ne couvre pas tous les cas.
# - `interfaces.cli.dev.generate_seed.TABLES` : schéma de seed,
#   `list[dict[str, Any]]` délibéré.
# - `run_pipeline` : entry-point CLI qui orchestre des subprocess + dict
#   d'options hétérogènes — hors scope du chantier typage.
[[tool.mypy.overrides]]
module = [
    "application.persons",
    "application.structures",
    "application.pipeline.extract.*",
    "application.pipeline.normalize.*",
    "application.pipeline.oa_status.*",
    "application.pipeline.publishers_journals.*",
    "application.pipeline.subjects._common",
    "application.ports.api.*",
    "application.ports.pipeline.extract.*",
    "application.ports.pipeline.staging",
    "application.ports.pipeline.subjects",
    "application.ports.repositories.*",
    "domain.publications.aggregation",
    "domain.sources.*",
    "infrastructure.jsonb_models.*",
    "infrastructure.queries.*",
    "infrastructure.repositories.*",
    "infrastructure.settings",
    "infrastructure.sources.*",
    "interfaces.api.app",
    "interfaces.api.models.*",
    "interfaces.cli.dev.generate_seed",
    "interfaces.cli.imports.*",
    "interfaces.cli.maintenance.*",
    "interfaces.cli.oneshot.*",
    "run_pipeline",
]
disallow_any_explicit = false
disallow_any_generics = false
